--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
     </div>
       <div class="d-flex flex-column mx-auto w-25 text-white fw-bold " id="searchDiv">
         <span class="list"></span>
+        <!-- <span class="list"></span>
+        <span class="list"></span>
+        <span class="list"></span> -->
         
        
 
       </div>
     </div>
+
     <main class="container mt-2 d-flex flex-column align-items-center">
       <div class="countries m-4">
         <div class="card shadow-lg" style="width: 22rem">
